feat: añade endpoint descargar factura
se añade en los settings de facturacion el endpoint para la descarga de facturas

--- a/facturacion_mx/facturacion_mx/doctype/facturacion_mx_settings/facturacion_mx_settings.json
+++ b/facturacion_mx/facturacion_mx/doctype/facturacion_mx_settings/facturacion_mx_settings.json
@@ -11,6 +11,7 @@
   "endpoint_obtener_facturas",
   "endpoint_crear_recibo_autofactura",
   "endpoint_enviar_correo",
+  "endpoint_descarga_factura",
   "api_settings_section",
   "live_secret_key",
   "user_secret_key"
@@ -60,12 +61,17 @@
    "fieldname": "endpoint_enviar_correo",
    "fieldtype": "Data",
    "label": "Endopoint Envio Factura por Correo Electr\u00f3nico"
+  },
+  {
+   "fieldname": "endpoint_descarga_factura",
+   "fieldtype": "Data",
+   "label": "Endpoint Descarga Factura"
   }
  ],
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2024-09-22 22:23:03.217669",
+ "modified": "2024-09-23 09:45:28.941227",
  "modified_by": "Administrator",
  "module": "Facturacion Mx",
  "name": "Facturacion MX Settings",
